--- a/style.css
+++ b/style.css
@@ -51,3 +51,16 @@ h2 {
   margin: 0 0 20px;
   font-weight: 300;
 }
+
+.person {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  padding: 10px;
+  margin: 0;
+}
