handle Add User button and refactor generating random users

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ button {
   font-size: 14px;
 }
 
+button:focus {
+  outline: none;
+}
+
 h2 {
   display: flex;
   justify-content: space-between;
