--- a/style.css
+++ b/style.css
@@ -64,6 +64,17 @@ h2 {
   margin-bottom: 10px;
 }
 
+.sum {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+  margin-bottom: 10px;
+  border-top: 1px solid #111;
+  padding-top: 10px;
+  margin-top: 20px;
+}
+
 h3 {
   padding: 10px;
   margin: 0;
